# ShootIt

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate_assets_h.sh  licenses.csv  play.sh
assets/: assetswip.xcf
assets/wip/: bombo.xcf
homework/: Enemypath.ipynb  notebook.sh
src/: main.cpp  main.h
wsrc/: shell.html  testharness.html
